# phylo

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
Doc/: CMakeLists.txt  Doxyfile.in
Tests/: CMakeLists.txt  LCA.cc  test_file.txt
src/: CMakeLists.txt  gene_tree.txt  gene_tree_example2.txt  main.cpp
src/Helper/: string.c
src/Helpers/: Tree.cpp  Tree.h  Trunk.cpp  Trunk.h  tree.cpp  tree.h
src/LCA/: LCA.cpp  LCA.h
src/Model/: Node.cpp  Node.h  Tree.cpp  Tree.h  Trunk.cpp  Trunk.h
src/Objects/: Node.cpp  Node.h
src/fitch/: fitch.cpp  fitch.h
src/lca/: lca.cpp  lca.h
src/reconciliation/: reconciliation.cpp  reconciliation.h
